# MK100TradingBot

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
include/: APIHandler.hpp  Config.hpp  DataManager.hpp  HistoricalData.hpp  Logger.hpp  MarkovChain.hpp  RiskManager.hpp  SignalGenerator.hpp  TradeExecutor.hpp  Utils.hpp
src/API/: APIHandler.cpp
src/Data/: DataManager.cpp  HistoricalData.cpp
src/Execution/: TradeExecutor.cpp
src/Logger/: Logger.cpp
src/Risk/: RiskManager.cpp
src/Signals/: MarkovChain.cpp  SignalGenerator.cpp
src/Utils/: Logger.cpp  MathUtils.cpp  Utils.cpp
